arma-rs/tests/derive/fail_enum.rs
use arma_rs_proc::{FromArma, IntoArma};

#[derive(IntoArma, FromArma)]
enum DeriveTest {}

fn main() {}
